--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,27 +7,22 @@ services:
   mysql:
 
       image: 'mysql:5.6'
-
-      command: --default-authentication-plugin=mysql_native_password
-
-      restart: always
-
+      command: --default-authentication-plugin=mysql_native_password 
       ports:
-
-        - 3308:3306
-
+        
+        - 33015:3306
       environment:
-
         MYSQL_ROOT_PASSWORD: work_distribution_pass
-
-      volumes:
-
-        - ./data/mysql:/var/lib/mysql
-
   node:
-      build: .
+      image: 'node'
       environment:
         - PORT=3010
+      stdin_open: true
+      tty: true
+      restart: always
+      depends_on:
+        - mysql
       ports: 
         - 3010:3010
-      command: npm start
+      command: ./initserver.sh
+       
