--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "mocha",
-    "start":"mocha"
+    "start":"node app.js"
   },
   "author": "",
   "license": "ISC"
