--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "express": "^4.17.1",
     "mocha": "^6.2.2",
     "mysql2": "^2.0.0",
+    "nodemon": "^1.19.4",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "mocha",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
